# raspberry-pi-ir-hat

./: .gitignore  .gitmodules  Cargo.toml  README.md  fp-lib-table  raspberry-pi-ir-hat.dcm  raspberry-pi-ir-hat.kicad_pcb  raspberry-pi-ir-hat.lib  raspberry-pi-ir-hat.net  raspberry-pi-ir-hat.pro  raspberry-pi-ir-hat.sch  sym-lib-table
.devcontainer/: Dockerfile  devcontainer.json
drivers/node/: jest.config.js  package-lock.json  package.json  tsconfig.json
drivers/nodejs/: package-lock.json  package.json  push-to-pi.sh  tsconfig.json
drivers/rust/: Cargo.toml  README.md  example.config.json  example.config.yaml
drivers/rust/src/: aho_corasick.rs  button_press.rs  config.rs  hat.rs  lib.rs  protocol.rs  raw_hat.rs  signal.rs  socat.rs
firmware/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeLists_template.txt  Cargo.toml  Makefile  README.md  STM32-for-VSCode.config.yaml  STM32G031.svd  STM32Make.make  firmware.ioc  flash.sh  format-code.sh  generated-code-apply-patch.sh  generated-code-create-patch.sh  generated-code.patch  memory.x  openocd.cfg  patch-generated-code.sh  print-largest-fn.sh  print-memory-usage.sh  print_largest_flash.sh  serialport-connect.sh  stm32cube.ioc  stm32g0x.cfg
firmware/.cargo/: config
firmware/docs/waveforms/: simplify-waveform.py
firmware/docs/waveforms/denon/: power-off.csv  power-on.csv
firmware/docs/waveforms/pioneer/: num2.csv
firmware/scripts/: serialport-connect.sh
firmware/src/: BothUSARTWriter.cpp  BothUSARTWriter.hpp  STM32G031F4Px_FLASH.ld  Test.cpp  Test.hpp  buffered_io.rs  config.h  current_sensor.c  current_sensor.cpp  current_sensor.h  current_sensor.hpp  debug.c  debug.cpp  debug.h  debug.hpp  debug.rs  dma_rx_ring_buffer.c  dma_rx_ring_buffer.h  dma_tx_ring_buffer.c  dma_tx_ring_buffer.h  duration.rs  firmware.c  firmware.cpp  firmware_it.c  globals.hpp  ir_activity_led_pin.rs  ir_rx.c  ir_rx.cpp  ir_rx.h  ir_rx.hpp  ir_rx.rs  ir_tx.c  ir_tx.cpp  ir_tx.h  ir_tx.rs  main.cpp  main.h  main.rs  main_it.c  main_it.cpp  (+22 more)
firmware/src-old/: dma_tx_ring_buffer.c
firmware/src/hal/: ADC.hpp  Bus.cpp  Bus.hpp  Clocks.cpp  Clocks.hpp  DMA.cpp  DMA.hpp  GPIO.cpp  GPIO.hpp  IWDG.cpp  IWDG.hpp  NVIC.cpp  NVIC.hpp  NVICHal.cpp  NVICHal.hpp  RCC.cpp  RCC.hpp  RCCHal.cpp  RCCHal.hpp  System.cpp  System.hpp  Timer.cpp  Timer.hpp  USART.cpp  USART.hpp  baud_rate.rs  dma.rs  gpio.rs  hertz.rs  mod.rs  nvic.rs  rcc.rs  sys_tick.rs  syscfg.rs  timer.rs  usart.rs
firmware/src/ir/: Decoder.cpp  Decoder.hpp  Denon.cpp  Denon.hpp  Denon_test.cpp  Encoder.cpp  Encoder.hpp  LongUnion.h  NEC.cpp  NEC.hpp  NEC_test.cpp  ProtocolDecoder.cpp  ProtocolDecoder.hpp  ProtocolEncoder.cpp  ProtocolEncoder.hpp  denon.rs  ir.hpp  mod.rs  utils.rs
firmware/src/lwrb/: lwrb.c  lwrb.h
firmware/src/peripheral/: CurrentSensor.cpp  CurrentSensor.hpp  IrRx.cpp  IrRx.hpp  IrTx.cpp  IrTx.hpp  USART.cpp  USART.hpp
firmware/src/stm32/: config_generated.h  main.c  main.h  stm32_assert.h  stm32g0xx_it.h
firmware/src/test/: test.cpp  test.hpp
firmware/src/test/waveforms/: simplify-waveform.py
firmware/src/test/waveforms/denon/: power-off.csv  power-on.csv
firmware/src/test/waveforms/pioneer/: num1.csv  num2.csv  power.csv
firmware/src/test/waveforms/unknown/: power.csv  volume-down.csv  volume-up.csv
firmware/src/utils/: Args.cpp  Args.hpp  Queue.hpp
firmware/test/: CMakeLists.txt
gerbers/: raspberry-pi-ir-hat-B_Cu.gbl  raspberry-pi-ir-hat-B_Mask.gbs  raspberry-pi-ir-hat-B_SilkS.gbo  raspberry-pi-ir-hat-Edge_Cuts.gm1  raspberry-pi-ir-hat-F_Cu.gtl  raspberry-pi-ir-hat-F_Mask.gts  raspberry-pi-ir-hat-F_SilkS.gto  raspberry-pi-ir-hat-job.gbrjob  raspberry-pi-ir-hat.drl
models3d/: assembly.iam
models3d/HDMI-Female-PanelMount/: HDMI-Female-PanelMount.iam  hdmi-panel-mount.ipt  hdmi-port.ipt
models3d/HDMI-Plug/: HDMI.ipt
models3d/OldVersions/: assembly.0024.iam
models3d/USB-MicroPlug/: Cable.ipt  Micro USB Plug.iam  Micro_USB_Plug v10.ipt  Micro_USB_Plug_Connector.ipt
models3d/USB-TypeB-Female-PanelMount/: USB-TypeB-Female-PanelMount.iam  USB-TypeB-Female.ipt  panel-mount.ipt
models3d/case/: case-back.ipt  case-bottom.ipt  case-front.ipt  case-top.ipt
models3d/pcb/: Board_Geoms_1d0a.iam  C1_C_0805_2012Metric_5F7375B8.ipt  D1_LED_0805_2012Metric_5F75F82D.ipt  D2_LED_0805_2012Metric_5F75F863.ipt  D3_LED_0805_2012Metric_5F5B9D6D.ipt  D4_LED_0805_2012Metric_5F75F7F7.ipt  J1_PinHeader_1x06_P254mm_Vertical_5F74D2AA.ipt  J2_Fusion002_5F7727BD.ipt  J3_Fusion002_5F772883.ipt  J4_PinHeader_2x03_P254mm_Vertical_5F74D2C3.ipt  J5_PinHeader_2x02_P254mm_Vertical_5F762A3D.ipt  J6_PinHeader_1x02_P254mm_Vertical_5F74D2F7.ipt  J7_PinSocket_2x20_P254mm_Vertical_5F6B4C8E.ipt  PCB_Sketch_1d0a.ipt  Pcb_1d0a.ipt  Q1_TSOT_23_5F739223.ipt  R1_R_0805_2012Metric_5F5B9E5A.ipt  R2_R_0805_2012Metric_5F737588.ipt  R3_R_0805_2012Metric_5F75F897.ipt  R4_R_0805_2012Metric_5F737558.ipt  R5_R_0805_2012Metric_5F5B9E9E.ipt  R6_R_0805_2012Metric_5F75FA0D.ipt  REF_BIVAR-RLP3-200-500_5F7383DA.ipt  Step_Models_1d0a.iam  Top_1d0a.iam  raspberry-pi-ir-hat.iam  raspberry-pi-ir-hat.step
models3d/raspberry-pi-3/: Assem1^Raspberry Pi 3.iam  MOLEX_1040310811.ipt  MOLEX_672983090.ipt  PJ-322.ipt  Part2^Raspberry Pi 3.ipt  Part4^Raspberry Pi 3.ipt  RPi3_ModelB v1.iam  Raspberry Pi 3.iam  Raspberry Pi 31.ipt  Raspberry Pi 310.ipt  Raspberry Pi 3100.ipt  (+325 more)
modules/: BIVAR-RLP3-200-500.kicad_mod  CUIDEVICES-SJ1-3523NG.kicad_mod
pcb/: .gitignore  drawing_sheet.kicad_wks  fp-info-cache  fp-lib-table  gerbv.gvp  raspberry-pi-hat.gvp  raspberry-pi-hat.kicad_pcb  raspberry-pi-hat.kicad_prl  raspberry-pi-hat.kicad_pro  raspberry-pi-hat.kicad_sch  raspberry-pi-hat.kicad_sym  raspberry-pi-ir-hat.kicad_pcb  raspberry-pi-ir-hat.lib  raspberry-pi-ir-hat.net  raspberry-pi-ir-hat.pro  raspberry-pi-ir-hat.sch  sym-lib-table
scripts/: raspberry-pi-ir-hat-network-bridge.service  raspberry-pi-setup.sh  read-only-fs.sh  start-dev.sh  start-mock-rpi.sh
src/: config.rs  ioctl.rs  logger.rs  main.rs  rc_devices.rs
src.old/: ir_in.rs  ir_out.rs  main.rs  mcp3204.rs  power.rs
(+63 files in other folders)
