[package]
name = "raspberry-pi-ir-hat-network-bridge"
version = "0.1.0"
edition = "2021"

[features]
mock-rpi = []

[dependencies]
anyhow = "1.0.89"
log = "0.4.22"
log4rs = "1.3.0"
nix = {version = "0.29.0", features = ["ioctl", "fs"]}
num-derive = "0.4.2"
num-traits = "0.2.19"
rppal = "0.19.0"
tokio = { version = "1.40.0", features = ["full"] }
