[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = { version = "0.6.15", features = ["device"] }
stm32g0 = { version = "0.14.0", features = ["stm32g031", "rt"] }
heapless = "0.7.8"
numtoa = "0.2.4"
defmt = "0.3.0"
defmt-rtt = "0.3.0"

[target.'cfg(not(test))'.dependencies]
panic-halt = "0.2.0"

[build]
rustflags = [
  # --- KEEP existing `link-arg` flags ---
  "-C", "link-arg=-Tlink.x",
  "-C", "link-arg=--nmagic",

  # --- ADD following new flag ---
  "-C", "link-arg=-Tdefmt.x",

  # --- abort without formatting
  "-Z", "build-std-features=panic_immediate_abort"
]

[profile.release]
# lto = true # link time optimization
