[package]
name = "raspberry-pi-ir-hat"
version = "1.0.0"
edition = "2018"

[lib]
name = "raspberry_pi_ir_hat"
path = "src/lib.rs"

[[bin]]
name = "irlearn"
path = "src/bin/irlearn.rs"

[[bin]]
name = "irplay"
path = "src/bin/irplay.rs"

[[bin]]
name = "irlisten"
path = "src/bin/irlisten.rs"

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serialport = "4.0.1"
